# EmbeddedExperiment

./: .gitignore  CMakeLists.txt  README.md  Report.md
globalvar/: .globalvar.o.d  Makefile  globalvar.c
globalvar/test/: smake.sh  test_ioctl.c  test_read.c  test_write.c
globalvar_poll/: Makefile  build.sh  globalvar_poll.c
globalvar_poll/test/: smake.sh  test.py  test_ioctl.c  test_multifd.c  test_read.c  test_write.c
kmodule/: CMakeLists.txt  CMakeLists.txt.bak2  Makefile.bak  cdev_driver.c  kbuild
polldev_driver/: Makefile
src/: CMakeLists.txt  fifo_read.c  fifo_write.c  mmap_read.c  mmap_write.c  pipe_test.c  poll_test.c  socket_client.c  socket_server.c  sysv_read.c  sysv_write.c
