add_executable(socket_client socket_client.c)
add_executable(socket_server socket_server.c)

add_executable(fifo_read fifo_read.c)
add_executable(fifo_write fifo_write.c)

add_executable(pipe_test pipe_test.c)

add_executable(sysv_write sysv_write.c)
add_executable(sysv_read sysv_read.c)

add_executable(mmap_read mmap_read.c)
add_executable(mmap_write mmap_write.c)

add_executable(poll_test poll_test.c)